--- a/src/app/components/activity/activity-details/activity-details.component.html
+++ b/src/app/components/activity/activity-details/activity-details.component.html
@@ -47,7 +47,14 @@
                 >
                   Meedoen!
                 </button>
+                <button
+                  class="btn btn-danger btn-lg px-4 py-2 fw-bold ms-3"
+                  (click)="cancelParticipation(event.id)"
+                >
+                  Afmelden
+                </button>
               </div>
+              
             </div>
           </div>
         </div>
