--- a/src/app/components/frontpage/frontpage.component.html
+++ b/src/app/components/frontpage/frontpage.component.html
@@ -9,7 +9,7 @@
         
         <div class="hero-content position-absolute" 
              style="bottom: 100px; left: 40px;">
-          <a routerLink="/register" 
+          <a href="#aanmelden" 
              class="btn btn-lg" 
              style="background-color: #3E7056; color: white; margin-right: 10px;">
             Aanmelden
