--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -19,9 +19,9 @@
           </a>
         </li>
         <li class="nav-item" style="border-right: 1px solid rgba(255, 255, 255, 0.5); padding-right: 15px; margin-right: 15px;">
-          <a routerLink="frontpage" class="nav-link px-3 fs-4 fw-bold" 
+          <a routerLink="timeline" class="nav-link px-3 fs-4 fw-bold" 
              style="color: #ffffff; text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);">
-            Sociaal
+            Tijdlijn
           </a>
         </li>
 
