--- a/src/app/components/activity/activity-details/activity-details.component.html
+++ b/src/app/components/activity/activity-details/activity-details.component.html
@@ -1,4 +1,12 @@
 <div class="container-fluid px-5 my-5" *ngIf="event; else loading">
+    <div *ngIf="showSuccessAlert" class="alert alert-success alert-dismissible fade show" role="alert">
+      <strong>Succes!</strong> {{ successMessage }}
+      <button type="button" class="btn-close" (click)="showSuccessAlert = false"></button>
+    </div>
+    <div *ngIf="showErrorAlert" class="alert alert-danger alert-dismissible fade show" role="alert">
+      <strong>Fout!</strong> {{ errorMessage }}
+      <button type="button" class="btn-close" (click)="showErrorAlert = false"></button>
+    </div>
   <div class="row justify-content-center">
     <div class="col-xl-10">
       <div class="card border-0 rounded-4 shadow-lg overflow-hidden">
